# buffers

./: .drone.star  .gitignore  CLAUDE.md  CMakeLists.txt  Jamfile  README.adoc  README.md  index.html
.drone/: drone.bat  drone.sh
.github/: copilot-instructions.md
.github/workflows/: ci-failure-auto-fix.yml  ci.yml  claude.yml
doc/: .gitignore  Jamfile  antora.yml  generate-files.mjs  local-playbook.yml  mrdocs.yml  package-lock.json
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: 1.intro.adoc  2.algorithms.adoc  3.dynamic-buffers.adoc  4.custom-sequences.adoc  5.1.ConstBufferSequence.adoc  5.2.MutableBufferSequence.adoc  5.3.DynamicBuffer.adoc  5.asio-buffers.adoc  index.adoc
doc/modules/ROOT/pages/concepts/: ConstBufferSequence.adoc  DynamicBuffer.adoc  MutableBufferSequence.adoc
doc/qbk/: 0.main.qbk  1.0.overview.qbk  3.0.concepts.qbk  index.xml  quickref.xml
doc/tagfiles/: boost-buffers-doxygen.tag.xml
doc/xsl/: custom-overrides.xsl
include/boost/: buffers.hpp
include/boost/buffers/: Google Drive.lnk  algorithm.hpp  any.hpp  any_buffers.hpp  any_dynamic_buffer.hpp  any_read_source.hpp  buffer.hpp  buffer_copy.hpp  buffer_pair.hpp  buffer_size.hpp  buffered_base.hpp  circular_buffer.hpp  const_buffer.hpp  const_buffer_pair.hpp  const_buffer_span.hpp  const_buffer_subspan.hpp  copy.hpp  data_source.hpp  dynamic_buffer.hpp  error.hpp  filter.hpp  flat_buffer.hpp  front.hpp  iterators.hpp  keep_prefix.hpp  keep_suffix.hpp  make_buffer.hpp  mutable_buffer.hpp  mutable_buffer_pair.hpp  mutable_buffer_span.hpp  mutable_buffer_subspan.hpp  prefix.hpp  range.hpp  read_source.hpp  remove_prefix.hpp  remove_suffix.hpp  sans_prefix.hpp  sans_suffix.hpp  sink.hpp  size.hpp  (+8 more)
include/boost/buffers/detail/: config.hpp  except.hpp  is_span.hpp  type_traits.hpp
include/boost/buffers/detail/impl/: except.ipp
include/boost/buffers/impl/: buffered_base.ipp  circular_buffer.ipp  const_buffer_pair.ipp  const_buffer_span.hpp  const_buffer_subspan.hpp  const_buffer_subspan.ipp  filter.hpp  filter.ipp  mutable_buffer_pair.ipp  mutable_buffer_span.hpp  mutable_buffer_subspan.hpp  mutable_buffer_subspan.ipp  sink.hpp  sink.ipp  source.hpp  source.ipp
meta/: explicit-failures-markup.xml  libraries.json
src/: any.cpp  any_buffers.cpp  buffer.cpp  buffer_pair.cpp  circular_buffer.cpp  const_buffer_pair.cpp  const_buffer_subspan.cpp  error.cpp  mutable_buffer_pair.cpp  mutable_buffer_subspan.cpp  src.cpp
src/detail/: except.cpp
test/: CMakeLists.txt  Jamfile  algorithm.cpp  any_dynamic_buffer.cpp  buffer.cpp  buffer_copy.cpp  buffer_pair.cpp  buffer_size.cpp  buffered_base.cpp  circular_buffer.cpp  const_buffer.cpp  const_buffer_pair.cpp  const_buffer_span.cpp  const_buffer_subspan.cpp  filter.cpp  flat_buffer.cpp  front.cpp  iterators.cpp  make_buffer.cpp  mutable_buffer.cpp  mutable_buffer_pair.cpp  mutable_buffer_span.cpp  mutable_buffer_subspan.cpp  sans_prefix.cpp  sans_suffix.cpp  sink.cpp  source.cpp  string_buffer.cpp  test_helpers.hpp  type_traits.cpp
test/cmake_test/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  Jamfile  any.cpp  any_buffers.cpp  any_dynamic_buffer.cpp  any_read_source.cpp  asio.cpp  buffer.cpp  buffer_pair.cpp  buffers.cpp  circular_buffer.cpp  const_buffer.cpp  const_buffer_pair.cpp  const_buffer_span.cpp  const_buffer_subspan.cpp  copy.cpp  data_source.cpp  dynamic_buffer.cpp  error.cpp  flat_buffer.cpp  front.cpp  keep_prefix.cpp  keep_suffix.cpp  make_buffer.cpp  mutable_buffer.cpp  mutable_buffer_pair.cpp  mutable_buffer_span.cpp  mutable_buffer_subspan.cpp  prefix.cpp  range.cpp  read_source.cpp  remove_prefix.cpp  remove_suffix.cpp  sans_prefix.cpp  sans_suffix.cpp  size.cpp  slice.cpp  string_buffer.cpp  suffix.cpp  tag_invoke.cpp  (+4 more)
